<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@mipmap/logo" />

            <!--姓名-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <!--邮箱-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!--密码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!--重复密码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!--身份证-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_identity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_identity"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <!--手机号码-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <!--用户地址-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <!--教育程度-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_sign_up_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/education"
                android:inputType="text" />

                <!--<android.support.v7.widget.AppCompatSpinner-->
                    <!--android:layout_marginBottom="8dp"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/spinner_sign_up_education"-->
                    <!--android:entries="@array/education"-->
                    <!--android:spinnerMode="dropdown"-->
                    <!--&gt;-->
                <!--</android.support.v7.widget.AppCompatSpinner>-->

            </android.support.design.widget.TextInputLayout>

            <!--生日-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_sign_up_brithday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brithday"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_link_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/sign_up_hint"
                android:textSize="16dp" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>